--- a/Andre_BrandaoTeodoro_Sec003_Exercise03/Andre_BrandaoTeodoro_Sec003_Exercise03.csproj
+++ b/Andre_BrandaoTeodoro_Sec003_Exercise03/Andre_BrandaoTeodoro_Sec003_Exercise03.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AsynchronousProgamming.resx">
+      <DependentUpon>AsynchronousProgamming.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
