--- a/Andre_BrandaoTeodoro_Sec003_Exercise02/App.config
+++ b/Andre_BrandaoTeodoro_Sec003_Exercise02/App.config
@@ -15,6 +15,10 @@
         </providers>
     </entityFramework>
   <connectionStrings>
-    <add name="BaseballEntities" connectionString="metadata=res://*/BaseballDb.csdl|res://*/BaseballDb.ssdl|res://*/BaseballDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Baseball.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BaseballEntities" connectionString="metadata=res://*/BaseballDb.csdl|res://*/BaseballDb.ssdl|res://*/BaseballDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Baseball.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="Andre_BrandaoTeodoro_Sec003_Exercise02.Properties.Settings.BaseballConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Baseball.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
