--- a/Andre_BrandaoTeodoro_Sec003_Exercise03/Andre_BrandaoTeodoro_Sec003_Exercise03.csproj
+++ b/Andre_BrandaoTeodoro_Sec003_Exercise03/Andre_BrandaoTeodoro_Sec003_Exercise03.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeData.cs" />
     <EmbeddedResource Include="AsynchronousProgamming.resx">
       <DependentUpon>AsynchronousProgamming.cs</DependentUpon>
     </EmbeddedResource>
